--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,15 @@ dependencies:
 
   material_design_icons_flutter: "2.7.94"
 
-  firebase_auth: "0.5.20"
+  firebase_auth: ^0.6.2+1
 
   charts_flutter: ^0.4.0
 
   sticky_headers: "^0.1.7"
 
-  cloud_firestore: ^0.8.1
+  cloud_firestore: ^0.8.1+1
+
+  rxdart: ^0.19.0
 
   bloc: ^0.4.2
 
